# ChangeLog for app-misc/run-mailcap
# Copyright 2000-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-misc/run-mailcap/ChangeLog,v 1.35 2006/02/20 23:43:46 agriffis Exp $

  20 Feb 2006; Aron Griffis <agriffis@gentoo.org>
  run-mailcap-3.34_p1.ebuild:
  Mark 3.34_p1 stable on alpha/ia64

*run-mailcap-3.34_p1 (03 Aug 2005)

  03 Aug 2005; Aron Griffis <agriffis@gentoo.org>
  +files/run-mailcap-breakrecursion.patch, +run-mailcap-3.34_p1.ebuild:
  Version bump. Add my patch to break infinite recursion if mailcap rule for
  text/plain includes copiousoutput

  06 May 2005; Sven Wegener <swegener@gentoo.org>
  run-mailcap-3.26_p1.ebuild, run-mailcap-3.28_p1.ebuild,
  run-mailcap-3.28_p1-r1.ebuild:
  Removed * postfix from <, <=, >= and > dependencies.

  21 Apr 2005; Aron Griffis <agriffis@gentoo.org>
  run-mailcap-3.28_p1-r1.ebuild:
  Stable on ia64

  01 Apr 2005; Michael Hanselmann <hansmi@gentoo.org>
  run-mailcap-3.28_p1-r1.ebuild:
  Stable on ppc.

  31 Mar 2005; <blubb@gentoo.org> run-mailcap-3.28_p1-r1.ebuild:
  stable on amd64

  03 Feb 2005; Gustavo Zacarias <gustavoz@gentoo.org>
  run-mailcap-3.28_p1-r1.ebuild:
  Stable on sparc

  02 Jan 2005; Ciaran McCreesh <ciaranm@gentoo.org> :
  Change encoding to UTF-8 for GLEP 31 compliance

*run-mailcap-3.28_p1-r1 (24 Dec 2004)

  24 Dec 2004; Andrej Kacian <ticho@gentoo.org>
  +run-mailcap-3.28_p1-r1.ebuild:
  Install mailcap manpage as mailcap.4 instead of default mailcap.5, to
  prevent file collision with net-mail/metamail. Closes #70412, reported by
  Alexander Skwar <askwar@digitalprojects.com>. Keeping stable keywords.

  23 Dec 2004; Bryan Østergaard <kloeri@gentoo.org>
  run-mailcap-3.28_p1.ebuild:
  Stable on alpha.

  23 Dec 2004; Guy Martin <gmsoft@gentoo.org> run-mailcap-3.28_p1.ebuild:
  Stable on hppa.

  20 Dec 2004; Tom Payne <twp@gentoo.org> -run-mailcap-3.23_p1-r1.ebuild,
  run-mailcap-3.28_p1.ebuild:
  Stable on x86. Removed old version.
