@@ -1,6 +1,6 @@
-# Copyright 1999-2005 Gentoo Foundation
+# Copyright 1999-2006 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/app-misc/run-mailcap/Attic/run-mailcap-3.28_p1-r1.ebuild,v 1.7 2005/05/06 03:30:00 swegener Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-misc/run-mailcap/Attic/run-mailcap-3.28_p1-r1.ebuild,v 1.8 2006/02/23 20:34:00 corsair Exp $
 
 MY_PV="${PV/_p/-}"
 DESCRIPTION="Execute programs via entries in the mailcap file"
@@ -8,7 +8,7 @@ HOMEPAGE="http://packages.debian.org/unstable/net/mime-support.html"
 SRC_URI="mirror://debian/pool/main/m/mime-support/mime-support_${MY_PV}.tar.gz"
 LICENSE="freedist"
 SLOT="0"
-KEYWORDS="alpha amd64 hppa ia64 ~mips ppc sparc x86"
+KEYWORDS="alpha amd64 hppa ia64 ~mips ppc ~ppc64 sparc x86"
 IUSE=""
 DEPEND=""
 RDEPEND=">=dev-lang/perl-5.6
