@@ -1,6 +1,9 @@
 # ChangeLog for x11-wm/ion3
 # Copyright 2000-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-wm/ion3/Attic/ChangeLog,v 1.31 2006/01/15 17:43:25 twp Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-wm/ion3/Attic/ChangeLog,v 1.32 2006/02/23 20:35:47 corsair Exp $
+
+  23 Feb 2006; Markus Rothe <corsair@gentoo.org> ion3-20060107.ebuild:
+  Added ~ppc64; bug #123845
 
 *ion3-20060107 (15 Jan 2006)
 
